--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,6 +3,7 @@
     color: white;
     display: flex;  
     justify-content: center;
+    position: relative;
 }
 
 .headerContainer{
@@ -43,4 +44,76 @@
 .date{
     position: absolute;
     top: 50px;
+}
+
+.headerReserve{
+    height: 30px;
+    background-color: white;
+    border: 3px solid brown;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 5px 0px;
+    border-radius: 5px;
+    position: absolute;
+    bottom: -25px;
+    width: 100%;
+    max-width: 1024px;
+}
+
+.headerReserveTitle{
+    color: black;
+    
+}
+
+.headerReserveItem{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.headerReserveText{
+    color: black;
+}
+
+.headerIcon{
+    color: lightslategrey;
+}
+
+.headerBtn{
+    color: brown;
+    background-color: rgb(153, 149, 136);
+}
+
+.options{
+    position: absolute;
+    top: 50px;
+    background-color: white;
+    color: gray;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+
+}
+
+.optionItem{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+.optionCounter{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.optionCounterButton{
+    width: 30px;
+    height: 30px;
+    border: 1px solid brown;
+    color: brown;
+    cursor: pointer;    
+    background-color: white;
 }
