--- a/src/style/Layout.scss
+++ b/src/style/Layout.scss
@@ -1,6 +1,6 @@
 .layout {
     display: grid;
     grid-template-rows: [header-s] 100px [header-e nav-s] 50px 
-                        [nav-e content-s] 1fr [content-e];
+                        [nav-e content-s] 500px [content-e];
     grid-template-columns: [s] 1fr [e];
 }
