--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -33,3 +33,10 @@
     font-size: 16px;
     cursor: pointer;
 }
+.reserve{
+    margin: auto;
+    height: 500px;
+    width: 500px;
+    background-color: brown;
+
+}
