--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -11,9 +11,8 @@
     border-width: 2px;
     display: flex;
     justify-content: center;
-    cursor: pointer;
     background-color: rgb(12, 68, 12);
-    align-items: center;
+    
 }
 
 .card-body{
@@ -28,3 +27,14 @@
     padding-top: 15px;
 }
 
+.card-reserve{
+    cursor: pointer;
+    padding: 5px;
+    
+}
+
+.reserve-btn-container{
+    display: flex;
+    justify-content: center;
+    
+}
