--- a/src/style.css
+++ b/src/style.css
@@ -125,4 +125,28 @@ body {
   display: flex;
   justify-content: center;
   background-color: #07380a;
+}
+
+.small-img {
+  height: 200px;
+  width: 200px;
+}
+
+.site-row {
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+}
+
+.reservepage-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.filter-container {
+  display: flex;
+  flex-direction: column;
+  width: 25rem;
+  padding-top: 100px;
+  margin-left: 40px;
 }/*# sourceMappingURL=style.css.map */
