--- a/src/style.scss
+++ b/src/style.scss
@@ -262,3 +262,10 @@ h1 {
     font-weight: bold;
     unicode-bidi: isolate;
 }
+.logincontainer{
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
