--- a/src/pages/Login.scss
+++ b/src/pages/Login.scss
@@ -52,3 +52,10 @@
     background-color: rgb(255,255,255); 
     border-style: solid;
 }
+.loginheader{
+    margin-bottom: 1.5rem; 
+    text-align: center; 
+    font-size: 1.125rem; 
+    line-height: 1.75rem; 
+    font-weight: 600;
+}
