--- a/src/pages/Login.scss
+++ b/src/pages/Login.scss
@@ -12,6 +12,8 @@
     border-color: rgb(100,116,139); 
     background-color: rgb(255,255,255); 
     padding-top: 1.25rem; 
+    width: 10rem;
+    height:15rem;
 }
 .emailform{
     margin-bottom: 0.75rem;
