--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -67,4 +67,8 @@
   font-size: 1.125rem;
   line-height: 1.75rem;
   font-weight: 600;
-}/*# sourceMappingURL=Login.css.map */
+}
+
+.nameform {
+  display: flex;
+}/*# sourceMappingURL=Register.css.map */
